# python-mimeparse

./: .gitignore  .travis.yml  LICENSE  MANIFEST  MANIFEST.in  PKG-INFO  README  README.md  README.rst  mimeparse.py  mimeparse_test.py  pyproject.toml  setup.cfg  setup.py  testdata.json  tox.ini
.github/workflows/: run-test.yaml
